--- a/style.css
+++ b/style.css
@@ -1,11 +1,26 @@
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700);
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 
-h1, h2, h3, h4, h5, h6 {
-    font-weight: 400;
-    margin: 0;
+body {
+  padding: 45px 15px;
+  color: #2f4f4f;
+  line-height: 1.5em;
+  font-size: 14px;
+  text-align: left;
+  font-family: 'Source Code Pro', serif ; 
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+  body * {
+    box-sizing: border-box; }
+
+h1, h2, h3, h4, h5, h6{
+  line-height: 50px; 
+  font-weight: 400;
 }
 
-h1 { font-size: 36px; }
+h1 { font-size: 48px; }
 h2 { font-size: 30px; }
 h3 { font-size: 24px; }
 h4 { font-size: 18px; }
@@ -16,12 +31,6 @@ h6 { font-size: 12px; }
     body {
 	margin: 0 16.667%;
     }
-}
-
-body {
-    padding: 0;
-    font-family: Merriweather, serif;
-    font-size: 14px;
 }
 
 h1 a, h2 a, h3 a {
