--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 
+a {
+    text-decoration: none;
+    color: #39a;
+}
+a:hover {
+    text-decoration: none;
+    color: #aa4433;
+}
+
 h1, h2, h3, h4, h5, h6{
-  line-height: 0px; 
-  font-weight: 400;
+    line-height: 0px; 
+    font-weight: 400;
+    text-decoration: none;
 }
 
 h1 { font-size: 48px; }
@@ -95,15 +105,6 @@ pre, code {
 
 img {
     max-width: 100%;
-}
-
-a {
-    text-decoration: underline;
-    color: #39a
-}
-a:hover {
-    text-decoration: underline;
-    color: #aa4433
 }
 
 footer {
