--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     width: 700px;
     margin-left: auto;
     margin-right: auto;
+    font-size: 14px;
 }
 
 h1 a, h2 a, h3 a {
@@ -111,6 +112,14 @@ footer {
     margin-top: 2 em;
     text-align: center;
     margin-bottom: 2em;
+}
+
+.tile {
+    display: inline-block;
+    width: 100%;
+    height: 200px;
+    background-position: center center;
+    background-size: cover;
 }
 
 @media only screen and (max-width: 800px) {
