Fix navbar multirow
When navbar collapses into >1 row on small screens, only the last row is clickable

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ nav ul {
 nav li {
     display: inline;
     float: center;
-    padding: 1em;
+    padding-left: 1em;
     position: relative;
 }
 
