--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ footer {
     height: 200px;
     background-position: center center;
     background-size: cover;
-}
+}/*
 
 blockquote {
   background: #f9f9f9;
@@ -158,7 +158,7 @@ code {
     display: block;
     padding: 0.5em 1em;
     border: 1px solid #bebab0;
-}
+}*/
 
 @media only screen and (max-width: 800px) {
     body {
